--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background: url('assets/images/TT.jpg') no-repeat center center;
+    background: url("https://www.westchesterfamily.com/wp-content/uploads/2022/04/GettyImages-1356959038-1200x800.jpg") no-repeat center center;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -20,7 +20,7 @@ body {
     height: 135px;
     width: 400px;
     border-radius: 10px;  
-    background-color: rgba(98, 187, 167, .8);
+    background-color: rgba(22, 60, 186, 0.8);
     text-align: center;
     font-family: 'Roboto', sans-serif;
 }
