--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,11 @@
-@import url('httpsL//fonts.googleapis.com/css2?family=Roboto&display=swap');
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-size: 20px;
 }
 
 body {
-    background: url("https://www.westchesterfamily.com/wp-content/uploads/2022/04/GettyImages-1356959038-1200x800.jpg") no-repeat center center;
+    background: url('/assets/images/Ping-Pong-Image.png') no-repeat center;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -17,19 +14,40 @@ body {
 }
 
 #landing-area {
-    height: 135px;
-    width: 400px;
-    border-radius: 10px;  
-    background-color: rgba(22, 60, 186, 0.8);
     text-align: center;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Fantasy', sans-serif;
 }
 
-#heading {
-    border-top: 5px;
+.heading {
+    color: rgb(255, 255, 255);
+    font-size: 40px;
+    margin-bottom: 40px;
+    margin-top: 55px;
 }
 
-#play-btn {
-    
+.button-section {
+    margin-bottom: 30px;
 }
+
+.button {
+    background-color: navy;
+    font-size: 25px;
+    color: #ffffff;
+    border: 5px solid #ffffff;
+    border-radius: 10px;
+    font-family: 'Fantasy', sans-serif;
+    line-height: 1.75rem;
+    padding: .75rem 1.65rem;
+    width: 100%;
+    max-width: 250px;
+    cursor: pointer;
+    margin: 20px 20px 0 20px;
+    display: inline-block;
+}
+
+.button:hover {
+    transform: rotate(-2deg);
+}
+
+
 
