adding to readme, testing code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/* Landing Page area */
+
 * {
     margin: 0;
     padding: 0;
@@ -20,12 +22,13 @@ body {
 
 .heading {
     color: rgb(255, 255, 255);
+    text-shadow: 2px 2px black;
     font-size: 40px;
     margin-bottom: 40px;
     margin-top: 55px;
 }
 
-/* button styling, button movement */
+/* button styling, button animation */
 
 .button-section {
     margin-bottom: 30px;
@@ -34,6 +37,7 @@ body {
 .button {
     background-color: navy;
     font-size: 25px;
+    text-decoration: none;
     color: #ffffff;
     border: 5px solid #ffffff;
     border-radius: 10px;
